New Implementazione Annualla Compenso anche se da fattura. Implmentazione per poter collegare note di credito a fattura con compenso